--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "vite --host"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^4.4.0",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
@@ -26,9 +27,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@swc/wasm": "^1.11.21",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
