--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "build-github": "vite build --base=/goit-react-hw-04/",
-    "start": "vite --host"
+    "start": "vite --host",
+    "sync": "git fetch origin && git reset --hard origin/main && git clean -fd"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.4.0",
